# mbdata-graphql

./: .gitignore  .mypy.ini  README.md  pyproject.toml
.github/workflows/: test.yml
mbdata_graphql/: app.py  schema.py  settings.py  types.py
mbdata_graphql/tests/: conftest.py  test_schema.py  test_schema_artists.py  test_schema_recordings.py  test_schema_releases.py
scripts/: check.sh  format.sh
tests/: test_schema.py
