[tool.poetry]
name = "mbdata-graphql"
version = "0.1.0"
description = ""
authors = ["Lukáš Lalinský <lalinsky@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
mbdata = "^25.0.4"
graphene-sqlalchemy = ">=2.0"
Flask-GraphQL = "^2.0.1"
Flask = "^2.0.2"
Flask-SQLAlchemy = "^2.5.1"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.19.2"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
